err/ckanext-harvest-zh.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/harvest'...
Listing './lib/python3.5/site-packages/ckanext/harvest/commands'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/commands/harvester.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/commands/harvester.py", line 109
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ckanext/harvest/controllers'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/controllers/organization.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/controllers/organization.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/controllers/view.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/controllers/view.py", line 64
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/harvest/harvesters'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/harvesters/base.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/harvesters/base.py", line 81
    except InvalidRequestError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/harvesters/ckanharvester.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/harvesters/ckanharvester.py", line 47
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/harvesters/dspckanharvester.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/harvesters/dspckanharvester.py", line 47
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/harvesters/taipeiharvester.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/harvesters/taipeiharvester.py", line 22
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/harvest/logic'...
Listing './lib/python3.5/site-packages/ckanext/harvest/logic/action'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/logic/action/update.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/logic/action/update.py", line 195
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/harvest/logic/auth'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/logic/validators.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/logic/validators.py", line 111
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/harvest/model'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/model/__init__.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/model/__init__.py", line 494
    except logic.ValidationError,e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/plugin.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/plugin.py", line 266
    if package_type <> 'harvest':
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/harvest/public'...
Listing './lib/python3.5/site-packages/ckanext/harvest/public/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/harvest/public/ckanext/harvest'...
Listing './lib/python3.5/site-packages/ckanext/harvest/public/ckanext/harvest/images'...
Listing './lib/python3.5/site-packages/ckanext/harvest/public/ckanext/harvest/images/icons'...
Listing './lib/python3.5/site-packages/ckanext/harvest/public/ckanext/harvest/javascript'...
Listing './lib/python3.5/site-packages/ckanext/harvest/templates'...
Listing './lib/python3.5/site-packages/ckanext/harvest/templates/admin'...
Listing './lib/python3.5/site-packages/ckanext/harvest/templates/snippets'...
Listing './lib/python3.5/site-packages/ckanext/harvest/templates/source'...
Listing './lib/python3.5/site-packages/ckanext/harvest/templates/source/job'...
Listing './lib/python3.5/site-packages/ckanext/harvest/tests'...
Compiling './lib/python3.5/site-packages/ckanext/harvest/tests/test_action.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/tests/test_action.py", line 92
    except ValueError,e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/harvest/tests/test_queue.py'...
***   File "./lib/python3.5/site-packages/ckanext/harvest/tests/test_queue.py", line 189
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext_harvest_zh-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
